# kogo-back

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel_build.py
.claude/: settings.json
apps/core/: admin.py  apps.py  auth_backends.py  auth_serializers.py  auth_urls.py  auth_views.py  authentication.py  dashboard_serializers.py  dashboard_views.py  enrollment_whatsapp.py  manychat_service.py  manychat_views.py  models.py  partner_serializers.py  partner_views.py  payment_service.py  permissions.py  revenue_service.py  scoping.py  serializers.py  signals.py  tasks.py  tranzila_service.py  urls.py  views.py
apps/courses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/customers/: admin.py  apps.py  discount_service.py  financial_models.py  models.py  serializers.py  signals.py  status_history_models.py  urls.py  views.py  widget_views.py
apps/documents/: apps.py  models.py  serializers.py  service.py  urls.py  views.py
apps/enrollments/: admin.py  attendance_whatsapp.py  enrollment_counts.py  models.py  serializers.py  trial_reminders.py  urls.py  views.py
apps/instructors/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/scheduling/: admin.py  apps.py  event_serializers.py  models.py  serializers.py  studio_conflict.py  studio_rental_finance.py  urls.py  views.py  weekdays.py
config/: api_urls.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: tranzila-api.md  tranzila-invoices-api.yaml  tranzila-main-api.yaml  tranzila-payment-request-api.yaml
(+103 files in other folders)
