# PEP 621 metadata required by Vercel's dependency installer (`uv lock`).
# Keep versions aligned with requirements.txt (local: pip install -r requirements.txt).
# Vercel Django: https://vercel.com/docs/frameworks/full-stack/django
[project]
name = "kogomalo-backend"
version = "0.1.0"
description = "Kogomalo Django REST API"
requires-python = ">=3.11"
dependencies = [
  "Django==4.2.11",
  "djangorestframework==3.14.0",
  "django-cors-headers==4.3.1",
  "psycopg2-binary==2.9.9",
  "python-decouple==3.8",
  "gunicorn==21.2.0",
  "dj-database-url==2.1.0",
  "celery==5.3.6",
  "redis==5.0.1",
  "django-celery-beat==2.5.0",
  "requests==2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "config.wsgi:application"

[tool.vercel.scripts]
# collectstatic is run by Vercel automatically when STATIC_ROOT is set.
build = "python vercel_build.py"
